--- a/material/program_Higgs.tex
+++ b/material/program_Higgs.tex
@@ -6,7 +6,7 @@
 \usepackage{amsfonts,amsthm,mathtools} %もちろん
 \usepackage{braket,physics} %あると便利なやつ
 \usepackage{bm} %ラプラシアンで使った
-\usepackage[top=30truemm,bottom=30truemm,left=25truemm,right=25truemm]{geometry} %余白設定
+\usepackage[top=30truemm,bottom=25truemm,left=25truemm,right=25truemm]{geometry} %余白設定
 \usepackage{latexsym} %ごくたまに必要になる
 \renewcommand{\kanjifamilydefault}{\gtdefault}
 \usepackage{otf} %宗教上の理由でmin10が嫌いなので
@@ -91,34 +91,37 @@
 %\footnote{This conference is supported by Osaka City University Advanced Mathematical Institute: MEXT Joint Usage/Research Center on Mathematics and Theoretical Physics.}
 
 
-\vskip8mm
+\vskip3mm
 \noindent{\Large \bf Program}
 
 \vskip3mm
-\noindent{\bf 27th May (Monday)}
+\noindent{\bf \underline{27th May (Monday)}}
 \vskip1mm
 \noindent {\bf 10:00--11:00  }
-TBA
-%{\bf Shouhei Ma (Tokyo Institute of Technology)}\\
-%Mixed Hodge structures of locally symmetric varieties
-\vskip3mm
+{\bf Laura Schaposnik (University of Illinois)}\\
+\hspace{11pt} An introduction to Higgs bundles and their integrable system I
+%\vskip3mm
 
 \noindent {\bf 11:30--12:30} 
-TBA
-\vskip3mm
+{\bf Laura Schaposnik (University of Illinois)}\\
+\hspace{11pt} An introduction to Higgs bundles and their integrable system II
+%\vskip3mm
 
 \noindent {\bf14:30--15:30 } 
-TBA
-\vskip3mm
+{\bf Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University)}\\
+\hspace{11pt}
+%\vskip3mm
 
 \noindent {\bf 16:00--17:00 } 
-TBA
+{\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
+\hspace{11pt}
 
-\vskip6mm
-\noindent{\bf 28th May (Tuesday)}
+%\vskip3mm
+\noindent{\bf \underline{28th May (Tuesday)}}
 \vskip1mm
 \noindent {\bf 10:00--11:00 } 
-TBA
+{\bf Laura Schaposnik (University of Illinois)}\\
+\hspace{11pt} An introduction to Higgs bundles and their integrable system III
 
 
 
@@ -143,9 +146,15 @@ TBA
 \end{comment}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newpage 
+\vskip8mm
+\noindent{\large \bf Information}
 
-\noindent{\large \bf Organizers}
+This workshop will be held as a pre-seminar for our conference 
+"New developments in Kobayashi-Hitchin correspondence and Higgs bundles"
+from 5th-9th August 2024 in Osaka Metropolitan University.
+
+\vskip8mm
+\noindent{\large \bf Organizers} \vspace{-11pt}
 \begin{itemize}
   \setlength{\parskip}{0cm} 
   \setlength{\itemsep}{0cm}
@@ -155,36 +164,36 @@ TBA
 \item Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University,)
   \end{itemize}
 
-\noindent{\large \bf Supports 1}
+%\noindent{\large \bf Supports 1}
 
-This conference is supported by “Osaka Central Advanced Mathematical Institute (MEXT Promotion of Distinctive Joint Research Center Program JPMXP0723833165), Osaka Metropolitan University”.
+%This conference is supported by “Osaka Central Advanced Mathematical Institute (MEXT Promotion of Distinctive Joint Research Center Program JPMXP0723833165), Osaka Metropolitan University”.
 
-\vskip3mm
-\noindent{\large \bf Supports 2}
+\noindent{\large \bf Supports}  \vspace{-11pt}
 \begin{itemize}
   \setlength{\parskip}{0cm} 
   \setlength{\itemsep}{0cm}
 \item JSPS KAKENHI 19H01787 Grant-in-Aid for Scientific Research (B)
-\item JSPS KAKENHI 20K03592 Grant-in-Aid for Scientific Research (C)
-\item JSPS KAKENHI 22K13907 Grant-in-Aid for Early Career Scientists.
-\item JSPS KAKENHI 23K03120 Grant-in-Aid for Scientific Research (C)
+%\item JSPS KAKENHI 20K03592 Grant-in-Aid for Scientific Research (C)
+%\item JSPS KAKENHI 22K13907 Grant-in-Aid for Early Career Scientists.
+%\item JSPS KAKENHI 23K03120 Grant-in-Aid for Scientific Research (C)
 \item JSPS KAKENHI 24K16912 Grant-in-Aid for Early Career Scientists.  
 \end{itemize}
 
-\noindent{\large \bf Homepage}
+%\noindent{\large \bf Homepage}
 
-We have posted various information on our website, including how to access to the conference room "Lecture Room E404".
+%We have posted various information on our website, including how to access to the conference room "Lecture Room E404".
 
-\vskip3mm
-Homepage Link: \url{https://masataka123.github.io/miniworkshop_Higgs/}
+%\vskip3mm
+%Homepage Link: \url{https://masataka123.github.io/miniworkshop_Higgs/}
 
-You can also read the QR code below:
+%You can also read the QR code below:
 
-\begin{figure}[htbp]
-\begin{center}
- \includegraphics[height=50mm, width=50mm]{Higgs.png}
-\end{center}
-\end{figure}
+%\begin{figure}[htbp]
+%\begin{center}
+% \includegraphics[height=50mm, width=50mm]{Higgs.png}
+%\end{center}
+%\end{figure}
+
 
 
 
@@ -193,16 +202,39 @@ You can also read the QR code below:
 \noindent{\Large \bf Abstract}
 \vskip5mm
 
-\noindent{\bf 27th May (Monday)}
-\vskip3mm
-
-%\noindent {\bf Shouhei Ma (Tokyo Institute of Technology)}\\
-%Mixed Hodge structures of locally symmetric varieties
-
+%\noindent{\bf 27th May (Monday)}
 %\vskip3mm
-%I will talk about the mixed Hodge structures on the cohomology of locally symmetric varieties. In the middle degree, I relate the weight filtration to the Siegel operators for certain modular forms. This has an application to a classical problem on the Siegel operators. In the general degrees, I construct a spectral sequence which converges to the edge Hodge components in the Hodge triangle, and whose E1 page is expressed by some simple geometric invariants associated to the cusps. This already degenerates at E1 in a certain range. Applications contain a new proof of a classical result of Harder on the Eisenstein cohomology of Hilbert modular varieties. 
-%\vskip6mm
 
+\noindent {\bf Laura Schaposnik (University of Illinois)}\\
+An introduction to Higgs bundles and their integrable system.
+
+\vskip3mm
+During the mini-course we will introduce Higgs bundles and
+their integrable system by first considering the basic definitions,
+and slowly introducing the Hitchin fibration. We will then look at the
+Hitchin fibration for different groups and see how dualities arise (be
+them from mirror symmetry, or from other correspondences such as low
+rank isogenies). Finally, we will dedicate the last talk to the
+introduction of some particular Lagrangians in the moduli space of
+Higgs bundles giving branes, whose understanding can lead to insights
+in representation theory ( about representations of 3-manifolds,
+equivariant representations, etc).
+\vskip6mm
+
+
+\noindent {\bf Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University)}\\
+
+
+\vskip3mm
+D
+\vskip6mm
+
+\noindent {\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
+
+
+\vskip3mm
+D
+\vskip6mm
 
 
 \end{document}
