--- a/material/program_Higgs.tex
+++ b/material/program_Higgs.tex
@@ -6,7 +6,7 @@
 \usepackage{amsfonts,amsthm,mathtools} %もちろん
 \usepackage{braket,physics} %あると便利なやつ
 \usepackage{bm} %ラプラシアンで使った
-\usepackage[top=30truemm,bottom=25truemm,left=25truemm,right=25truemm]{geometry} %余白設定
+\usepackage[top=30truemm,bottom=20truemm,left=25truemm,right=25truemm]{geometry} %余白設定
 \usepackage{latexsym} %ごくたまに必要になる
 \renewcommand{\kanjifamilydefault}{\gtdefault}
 \usepackage{otf} %宗教上の理由でmin10が嫌いなので
@@ -97,7 +97,7 @@
 \vskip3mm
 \noindent{\bf \underline{27th May (Monday)}}
 \vskip1mm
-\noindent {\bf 10:00--11:00  }
+\noindent {\bf 10:00--11:00}
 {\bf Laura Schaposnik (University of Illinois)}\\
 \hspace{11pt} An introduction to Higgs bundles and their integrable system I
 %\vskip3mm
@@ -107,19 +107,19 @@
 \hspace{11pt} An introduction to Higgs bundles and their integrable system II
 %\vskip3mm
 
-\noindent {\bf14:30--15:30 } 
+\noindent {\bf14:30--15:30} 
 {\bf Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University)}\\
-\hspace{11pt}
+\hspace{11pt} Harmonic metrics on cyclic Higgs bundles, subharmonic functions, and entropy
 %\vskip3mm
 
-\noindent {\bf 16:00--17:00 } 
+\noindent {\bf 16:00--17:00} 
 {\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
-\hspace{11pt}
+\hspace{11pt} T.B.A.
 
 %\vskip3mm
 \noindent{\bf \underline{28th May (Tuesday)}}
 \vskip1mm
-\noindent {\bf 10:00--11:00 } 
+\noindent {\bf 10:00--11:00} 
 {\bf Laura Schaposnik (University of Illinois)}\\
 \hspace{11pt} An introduction to Higgs bundles and their integrable system III
 
@@ -208,7 +208,7 @@ from 5th-9th August 2024 in Osaka Metropolitan University.
 \noindent {\bf Laura Schaposnik (University of Illinois)}\\
 An introduction to Higgs bundles and their integrable system.
 
-\vskip3mm
+\vskip1mm
 During the mini-course we will introduce Higgs bundles and
 their integrable system by first considering the basic definitions,
 and slowly introducing the Hitchin fibration. We will then look at the
@@ -219,22 +219,22 @@ introduction of some particular Lagrangians in the moduli space of
 Higgs bundles giving branes, whose understanding can lead to insights
 in representation theory ( about representations of 3-manifolds,
 equivariant representations, etc).
-\vskip6mm
+\vskip4mm
 
 
 \noindent {\bf Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University)}\\
+Harmonic metrics on cyclic Higgs bundles, subharmonic functions, and entropy
 
-
-\vskip3mm
-D
-\vskip6mm
+\vskip1mm
+Let $X$ be a Riemann surface and $K_X \rightarrow X$ the canonical bundle. For each integer $r \geq 2$, each $q \in H^0(K_X^r)$, and each choice of the square root $K_X^{1/2}$ of the canonical bundle, we canonically obtain a Higgs bundle, which is called a cyclic Higgs bundle. In this talk, I will introduce several new notions regarding cyclic Higgs bundles. First, I will introduce the notion of cyclic Higgs bundles with multi-valued Higgs fields and their associated Hitchin equation. Second, I will introduce a generalization of the Hitchin equation for cyclic Higgs bundles associated with a quasi-subharmonic function, obtained by infinitely increasing the degree of multivalence of the multi-valued Higgs field. Third, I will further generalize this generalized Hitchin equation to complex higher-dimensional manifolds. Finally, I will propose a new concept, which I call cyclic entropy, defined using the solution to the generalized Hitchin equation for cyclic Higgs bundles associated with a quasi-subharmonic function. One of the motivations for introducing these new notions comes from weighted potential theory, including the theory of the asymptotic behavior of sections of holomorphic line bundles. I will present the results obtained so far regarding these new concepts and discuss their potential for further development.
+\vskip4mm
 
 \noindent {\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
+T.B.A.
 
+\vskip1mm
 
-\vskip3mm
-D
-\vskip6mm
+%\vskip4mm
 
 
 \end{document}
