--- a/material/program.tex
+++ b/material/program.tex
@@ -6,7 +6,7 @@
 \usepackage{amsfonts,amsthm,mathtools} %もちろん
 \usepackage{braket,physics} %あると便利なやつ
 \usepackage{bm} %ラプラシアンで使った
-\usepackage[top=30truemm,bottom=20truemm,left=25truemm,right=25truemm]{geometry} %余白設定
+\usepackage[top=20truemm,bottom=30truemm,left=22truemm,right=22truemm]{geometry} %余白設定
 \usepackage{latexsym} %ごくたまに必要になる
 \renewcommand{\kanjifamilydefault}{\gtdefault}
 \usepackage{otf} %宗教上の理由でmin10が嫌いなので
@@ -114,7 +114,7 @@
 
 \noindent {\bf 16:00--17:00} 
 {\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
-\hspace{11pt} T.B.A.
+\hspace{11pt} Conformal limit on Cayley components
 
 %\vskip3mm
 \noindent{\bf \underline{28th May (Tuesday)}}
@@ -219,7 +219,7 @@ introduction of some particular Lagrangians in the moduli space of
 Higgs bundles giving branes, whose understanding can lead to insights
 in representation theory ( about representations of 3-manifolds,
 equivariant representations, etc).
-\vskip4mm
+\vskip5mm
 
 
 \noindent {\bf Natsuo Miyatake (Mathematical Science Center for Co-creative Society, Tohoku University)}\\
@@ -227,13 +227,13 @@ Harmonic metrics on cyclic Higgs bundles, subharmonic functions, and entropy
 
 \vskip1mm
 Let $X$ be a Riemann surface and $K_X \rightarrow X$ the canonical bundle. For each integer $r \geq 2$, each $q \in H^0(K_X^r)$, and each choice of the square root $K_X^{1/2}$ of the canonical bundle, we canonically obtain a Higgs bundle, which is called a cyclic Higgs bundle. In this talk, I will introduce several new notions regarding cyclic Higgs bundles. First, I will introduce the notion of cyclic Higgs bundles with multi-valued Higgs fields and their associated Hitchin equation. Second, I will introduce a generalization of the Hitchin equation for cyclic Higgs bundles associated with a quasi-subharmonic function, obtained by infinitely increasing the degree of multivalence of the multi-valued Higgs field. Third, I will further generalize this generalized Hitchin equation to complex higher-dimensional manifolds. Finally, I will propose a new concept, which I call cyclic entropy, defined using the solution to the generalized Hitchin equation for cyclic Higgs bundles associated with a quasi-subharmonic function. One of the motivations for introducing these new notions comes from weighted potential theory, including the theory of the asymptotic behavior of sections of holomorphic line bundles. I will present the results obtained so far regarding these new concepts and discuss their potential for further development.
-\vskip4mm
+\vskip5mm
 
 \noindent {\bf Mengxue Yang (Kavli IPMU, The University of Tokyo)}\\
-T.B.A.
+Conformal limit on Cayley components
 
 \vskip1mm
-
+In 2014, Gaiotto conjectured that there is a biholomorphism between Hitchin components and spaces of opers on a punctured sphere via a scaling limit called the $\hbar$-conformal limit. On a compact Riemann surface of $g \ge 2$, this biholomorphism has been proven in 2016. Motivated by the study of higher Teichm\"uller spaces, we may view the Hitchin components as a part of a larger family of special components called Cayley components. I will talk about the Cayley components and propose their conformal limit to be the generalized notion of opers of Collier—Sanders.
 %\vskip4mm
 
 
