--- a/material/program.tex
+++ b/material/program.tex
@@ -66,6 +66,7 @@
 %\end{proof}
 %The end of a proof is marked with a square.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\pagestyle{empty}
 
 \begin{document}
 
